<resources>
    <string name="app_name">AppComida</string>
    <string name="price">$%s</string>
    <string name="title_navHome">Home</string>
    <string name="title_navBrowse">Browse</string>
    <string name="title_navCart">Cart</string>
    <string name="title_navAccount">Account</string>
    <string name="account_name">Nombre</string>
    <string name="account_favorites">Your Favorites</string>
    <string name="logout">Logout</string>
    <string name="account_orders">Your Orders</string>
    <string name="account_help">Help</string>
    <string name="account_promotions">Promotions</string>
    <string name="account_locations">Locations</string>
    <string name="subtotal">Subtotal</string>
    <string name="go_to_checkout">Go to checkout</string>
    <string name="browse_search_hint">Food, drinks, restaurants, etc.</string>
    <string name="browse_top_categories">Top Categories</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="name_hint">Name</string>
    <string name="phonenumber_hint">Phone Number</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="recover">Recover</string>
    <string name="recover_password">Recover Password</string>
    <string name="register_account_u"><u>Register Account</u></string>
    <string name="recover_password_u"><u>Recover Password</u></string>
    <string name="your_address">Your Address</string>
    <string name="order_items">Order Items</string>
    <string name="order_details">Order Details</string>
    <string name="fees">Fees</string>
    <string name="tips">Tips</string>
    <string name="order">Order</string>
    <string name="address_hint">Address</string>
    <string name="address_name">Address Name</string>
    <string name="address_number_hint">House or apartment number</string>
    <string name="zipcode_hint">Zip code</string>
    <string name="register_location">Register Location</string>
    <string name="default_category">Category</string>
    <string name="search">Search2</string>
    <string name="algolia">Debido a la limitante de tener que vincular la tarjeta a firebase para la busqueda de strings con algolia los nombres de restaurantes deben de ser exactos</string>
    <string name="restaurant">Restaurant name</string>
    <string name="delivery_time">Delivery Time</string>
    <string name="rating">5.0</string>
    <string name="schedule">Schedule: %s - %s</string>
    <string name="tap_for_address">Tap for address</string>
    <string name="unavailable_orders">Unavailable Orders</string>
    <string name="text">%s</string>
    <string name="special_instructions">Special Instructions</string>
    <string name="add_note">Add note...</string>
    <string name="add_to_cart">Add %s to cart - $%s</string>
    <string name="cart_item_name">%s x%s</string>
    <string name="big_description">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industrys standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">MapsActivity</string>
</resources>