<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.appcomida.ui.home.HomeFragment"
        android:label="@string/title_navHome"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_browse"
        android:name="com.example.appcomida.ui.browse.BrowseFragment"
        android:label="@string/title_navBrowse"
        tools:layout="@layout/fragment_browse" />

    <fragment
        android:id="@+id/navigation_cart"
        android:name="com.example.appcomida.ui.cart.CartFragment"
        android:label="@string/title_navCart"
        tools:layout="@layout/fragment_cart" />

    <fragment
        android:id="@+id/navigation_account"
        android:name="com.example.appcomida.ui.account.AccountFragment"
        android:label="@string/title_navAccount"
        tools:layout="@layout/fragment_account" />
</navigation>