<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/restaurant_container"
    android:layout_width="match_parent"
    android:layout_height="@dimen/regular_image">

    <ImageView
        android:id="@+id/image"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/ic_launcher_background" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@+id/image"
        android:orientation="vertical">

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/restaurant"
            android:textSize="@dimen/restaurant_title" />

        <TextView
            android:id="@+id/delivery_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delivery_time" />
    </LinearLayout>

    <TextView
        android:id="@+id/rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:gravity="center"
        android:background="@drawable/rounded_textview"
        android:text="@string/rating"
        android:textSize="@dimen/rating_text"/>


</RelativeLayout>