<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RestaurantMenuActivity">

    <ImageView
        android:id="@+id/image"
        android:layout_width="@dimen/restaurant_big_image_size"
        android:layout_height="@dimen/restaurant_big_image_size"
        android:src="@drawable/ic_launcher_background"/>


    <ImageButton
        android:id="@+id/back_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:padding="@dimen/small_padding"
        android:src="@drawable/ic_baseline_arrow_back_24"
        android:background="@drawable/circle"/>

    <LinearLayout
        android:id="@+id/test"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/menu_vertical_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/restaurant"
                android:textSize="@dimen/big_restaurant_title"/>
            <LinearLayout
                android:id="@+id/tap_for_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="@dimen/my_activity_vertical_margin">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/rating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rating"
                        android:textSize="@dimen/regular_text"
                        android:gravity="center"
                        android:drawableStart="@drawable/ic_baseline_star_rate_24"
                        android:drawableEnd="@drawable/ic_baseline_horizontal_rule_24"/>

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/category"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/default_category"
                        android:textSize="@dimen/regular_text"
                        android:gravity="center"/>

                </LinearLayout>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/schedule"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/schedule"
                    android:textSize="@dimen/regular_text"
                    android:textColor="@color/grey"/>

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tap_for_address"
                    android:textSize="@dimen/regular_text"
                    android:textColor="@color/grey"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/my_activity_vertical_margin">

    </androidx.fragment.app.FragmentContainerView>

</FrameLayout>