<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingEnd="@dimen/my_activity_horizontal_margin"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="0dp"
        android:layout_toStartOf="@+id/menu_item_image"
        android:orientation="vertical">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/menu_item_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/bigger_text"
            android:text="@string/restaurant" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/menu_item_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/bigger_text"
            android:text="@string/price" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/menu_item_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/big_description"
            android:textColor="@color/grey"
            android:textSize="@dimen/rating_text"
            android:maxLines="@integer/max_description_lines"
            android:ellipsize="end"/>

    </LinearLayout>

    <ImageView
        android:id="@+id/menu_item_image"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/regular_image"
        android:layout_marginStart="@dimen/my_activity_horizontal_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:src="@drawable/ic_launcher_background" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/menu_item_image"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:background="@android:color/darker_gray" />

</RelativeLayout>